@startuml
skinparam classAttributeIconSize 0


class TaskAssignmentDriver {
    +main():void
}

interface Chain {
    +setNextChain(Chain nextChain):void
    +assignTask(User user):void
}


class AssignOwnerTask {
      -User user
      -Chain nextInChain
      +setNextChain(Chain nextChain):void
      +assignTask(User user) :void
      +getUser(): User
      +setUser(User user):void
}

class AssignCEOTask {
      -User user
      -Chain nextInChain
      +setNextChain(Chain nextChain):void
      +assignTask(User user) :void
      +getUser(): User
      +setUser(User user):void
}

class AssignManagerTask {
      -User user
      -Chain nextInChain
      +setNextChain(Chain nextChain):void
      +assignTask(User user) :void
      +getUser(): User
      +setUser(User user):void
}

class AssignEmployeeTask {
      -User user
      -Chain nextInChain
      +setNextChain(Chain nextChain):void
      +assignTask(User user) :void
      +getUser(): User
      +setUser(User user):void
}


 TaskAssignmentDriver --> Chain
 Chain  <-- Chain
 Chain  <|-- AssignOwnerTask
 Chain  <|-- AssignCEOTask
 Chain  <|-- AssignManagerTask
 Chain  <|-- AssignEmployeeTask




@enduml